# aoc2025

./: .gitignore  Cargo.toml  README.md  build.rs  create-assignment  cspell.json
.cursor/commands/: aoc-distill.md  rust-teacher.md
src/: main.rs
src/assignments/: assignment_1.rs  assignment_2.rs  assignment_3.rs  assignment_4.rs  mod.rs  prelude.rs
